--- a/External/Assimp/contrib/zlib/ALL_BUILD.vcxproj.filters
+++ b/External/Assimp/contrib/zlib/ALL_BUILD.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\CMakeLists.txt" />
+    <CustomBuild Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
