--- a/External/Assimp/contrib/zlib/zlibstatic.vcxproj.filters
+++ b/External/Assimp/contrib/zlib/zlibstatic.vcxproj.filters
@@ -1,96 +1,93 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\adler32.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\adler32.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\compress.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\compress.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\crc32.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\crc32.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\deflate.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\deflate.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\gzclose.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzclose.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\gzlib.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzlib.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\gzread.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzread.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\gzwrite.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzwrite.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inflate.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inflate.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\infback.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\infback.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inftrees.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inftrees.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inffast.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffast.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\trees.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\trees.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\uncompr.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\uncompr.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\zutil.c">
+    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zutil.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\zconf.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zconf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\zlib.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zlib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\crc32.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\crc32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\deflate.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\deflate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\gzguts.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzguts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inffast.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inffixed.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffixed.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inflate.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inflate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\inftrees.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inftrees.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\trees.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\trees.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\zutil.h">
+    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zutil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <CustomBuild Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\contrib\zlib\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{A335DA51-7141-32D1-A21B-9070FAFAC7AB}</UniqueIdentifier>
+      <UniqueIdentifier>{58E6902F-1626-3C09-8C3B-A59EC2EEC0B8}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{ABE23643-4B2C-3965-9674-394E316AB24D}</UniqueIdentifier>
+      <UniqueIdentifier>{A9C2D560-3D97-3C56-ACBD-73270BFC703B}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
