--- a/External/Assimp/test/headercheck/INSTALL.vcxproj.filters
+++ b/External/Assimp/test/headercheck/INSTALL.vcxproj.filters
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CustomBuild Include="C:\Users\K021G1118\Downloads\assimp-5.2.5 (1)\assimp-5.2.5\CMakeFiles\408a8cda0b0c3216e9bffb3917fdfbd7\INSTALL_force.rule">
+    <CustomBuild Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\CMakeFiles\572b10bd95df2dca8b26f1c91a2b7c8c\INSTALL_force.rule">
       <Filter>CMake Rules</Filter>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="CMake Rules">
-      <UniqueIdentifier>{210E93C0-7DD4-3F16-AB7F-9A2EC1A4FB56}</UniqueIdentifier>
+      <UniqueIdentifier>{B570FFAD-9F4E-357B-B284-76E0D8B73A4F}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
