--- a/External/Assimp/contrib/zlib/zlibstatic.vcxproj
+++ b/External/Assimp/contrib/zlib/zlibstatic.vcxproj
@@ -59,26 +59,26 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\Debug\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)External\Assimp\contrib\zlib\Debug\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">zlibstatic.dir\Debug\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">zlibstaticd</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.lib</TargetExt>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\Release\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(SolutionDir)External\Assimp\contrib\zlib\Release\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|x64'">zlibstatic.dir\Release\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">zlibstatic</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.lib</TargetExt>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\MinSizeRel\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">$(SolutionDir)External\Assimp\contrib\zlib\MinSizeRel\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">zlibstatic.dir\MinSizeRel\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">zlibstatic</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">.lib</TargetExt>
-    <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\RelWithDebInfo\</OutDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">$(SolutionDir)External\Assimp\contrib\zlib\RelWithDebInfo\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">zlibstatic.dir\RelWithDebInfo\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">zlibstatic</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">.lib</TargetExt>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /bigobj</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -99,10 +99,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;_WINDOWS;ASSIMP_BUILD_NO_M3D_IMPORTER;ASSIMP_BUILD_NO_M3D_EXPORTER;WIN32_LEAN_AND_MEAN;UNICODE;_UNICODE;NO_FSEEKO;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;CMAKE_INTDIR=\"Debug\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -115,7 +115,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /bigobj</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <DisableSpecificWarnings>4131;4127;4244;4244</DisableSpecificWarnings>
@@ -136,10 +136,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;ASSIMP_BUILD_NO_M3D_IMPORTER;ASSIMP_BUILD_NO_M3D_EXPORTER;WIN32_LEAN_AND_MEAN;UNICODE;_UNICODE;NO_FSEEKO;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;CMAKE_INTDIR=\"Release\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -152,7 +152,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /bigobj</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <DisableSpecificWarnings>4131;4127;4244;4244</DisableSpecificWarnings>
@@ -173,10 +173,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;ASSIMP_BUILD_NO_M3D_IMPORTER;ASSIMP_BUILD_NO_M3D_EXPORTER;WIN32_LEAN_AND_MEAN;UNICODE;_UNICODE;NO_FSEEKO;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;CMAKE_INTDIR=\"MinSizeRel\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -189,7 +189,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /bigobj</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -209,10 +209,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;ASSIMP_BUILD_NO_M3D_IMPORTER;ASSIMP_BUILD_NO_M3D_EXPORTER;WIN32_LEAN_AND_MEAN;UNICODE;_UNICODE;NO_FSEEKO;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;CMAKE_INTDIR=\"RelWithDebInfo\"</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>C:\K021G1118\CG2\DirectX12CG\External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;C:\K021G1118\CG2\DirectX12CG\External\Assimp\code;C:\K021G1118\CG2\DirectX12CG\External\Assimp\.;C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\Assimp\include;C:\K021G1118\CG2\DirectX12CG\External\Assimp;$(SolutionDir)External\Assimp\code;$(SolutionDir)External\Assimp\.;$(SolutionDir)External\Assimp\contrib\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -224,35 +224,35 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\adler32.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\compress.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\crc32.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\deflate.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzclose.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzlib.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzread.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzwrite.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inflate.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\infback.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inftrees.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffast.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\trees.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\uncompr.c" />
-    <ClCompile Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zutil.c" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zconf.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zlib.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\crc32.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\deflate.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\gzguts.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffast.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inffixed.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inflate.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\inftrees.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\trees.h" />
-    <ClInclude Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\contrib\zlib\zutil.h" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\adler32.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\compress.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\crc32.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\deflate.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\gzclose.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\gzlib.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\gzread.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\gzwrite.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\inflate.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\infback.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\inftrees.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\inffast.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\trees.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\uncompr.c" />
+    <ClCompile Include="$(SolutionDir)External\Assimp\contrib\zlib\zutil.c" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\zconf.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\zlib.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\crc32.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\deflate.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\gzguts.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\inffast.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\inffixed.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\inflate.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\inftrees.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\trees.h" />
+    <ClInclude Include="$(SolutionDir)External\Assimp\contrib\zlib\zutil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="C:\K021G1118\CG2\DirectX12CG\External\Assimp\ZERO_CHECK.vcxproj">
+    <ProjectReference Include="$(SolutionDir)External\Assimp\ZERO_CHECK.vcxproj">
       <Project>{A2B18496-CDA4-36F6-8EED-0BDA87AEBDEB}</Project>
       <Name>ZERO_CHECK</Name>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
